<!-- 
 * Copyright (C) 2014 Mikhail Sapozhnikov
 *
 * This file is part of scriba-android.
 *
 * scriba-android is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * scriba-android is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with scriba-android. If not, see <http://www.gnu.org/licenses/>.
 *
 -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_search"
          android:title="@string/search"
          android:icon="@drawable/search"
          android:showAsAction="always|collapseActionView"
          android:actionViewClass="android.widget.SearchView" />
    <item android:id="@+id/action_add_record"
          android:icon="@drawable/plus"
          android:title="@string/add_record"
          android:showAsAction="ifRoom"/>
    <item android:id="@+id/action_set_search_type"
          android:title="@string/search_type"
          android:showAsAction="never">
          <menu>
              <group android:id="@+id/group_search_type_company"
                     android:visible="false"
                     android:checkableBehavior="single"
                     android:showAsAction="never">
                  <item android:id="@+id/comp_search_name"
                        android:title="@string/comp_search_name"/>
                  <item android:id="@+id/comp_search_jur_name"
                        android:title="@string/comp_search_jur_name"/>
                  <item android:id="@+id/comp_search_address"
                        android:title="@string/comp_search_address"/>
              </group>
              <group android:id="@+id/group_search_type_event"
                     android:visible="false"
                     android:checkableBehavior="single"
                     android:showAsAction="never">
                  <item android:id="@+id/event_search_descr"
                        android:title="@string/event_search_descr"/>
              </group>
              <group android:id="@+id/group_search_type_poc"
                     android:visible="false"
                     android:checkableBehavior="single"
                     android:showAsAction="never">
                  <item android:id="@+id/poc_search_name"
                        android:title="@string/poc_search_name"/>
                  <item android:id="@+id/poc_search_position"
                        android:title="@string/poc_search_position"/>
                  <item android:id="@+id/poc_search_email"
                        android:title="@string/poc_search_email"/>
              </group>
              <group android:id="@+id/group_search_type_project"
                     android:visible="false"
                     android:checkableBehavior="single"
                     android:showAsAction="never">
                  <item android:id="@+id/proj_search_title"
                        android:title="@string/proj_search_title"
                        android:showAsAction="never"/>
                  <item android:id="@+id/proj_search_state"
                        android:title="@string/proj_search_state"
                        android:showAsAction="never"/>
              </group>
          </menu>
    </item>
    <item android:id="@+id/action_export_all"
          android:icon="@drawable/export_data"
          android:title="@string/export_all_data"
          android:showAsAction="never"/>
    <item android:id="@+id/action_open_backup_dir"
          android:icon="@drawable/open_dir"
          android:title="@string/open_backup_dir"
          android:showAsAction="never"/>
    <item android:id="@+id/action_import"
          android:icon="@drawable/import_data"
          android:title="@string/import_data"
          android:showAsAction="never"/>
</menu>
