<?xml version="1.0" encoding="utf-8"?>

<!-- 
 * Copyright (C) 2014 Mikhail Sapozhnikov
 *
 * This file is part of scriba-android.
 *
 * scriba-android is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * scriba-android is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with scriba-android. If not, see <http://www.gnu.org/licenses/>.
 *
 -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    >

    <!-- POC first name -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/scriba_add_entry_item"
        >
        <TextView
            android:id="@+id/poc_firstname_header"
            android:text="@string/poc_firstname_title"
            style="@style/scriba_entry_item_header"
            />
        <EditText
            android:id="@+id/poc_firstname_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/scriba_entry_delim"
        >
    </LinearLayout>

    <!-- POC second name -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/scriba_add_entry_item"
        >
        <TextView
            android:id="@+id/poc_secondname_header"
            android:text="@string/poc_secondname_title"
            style="@style/scriba_entry_item_header"
            />
        <EditText
            android:id="@+id/poc_secondname_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/scriba_entry_delim"
        >
    </LinearLayout>

    <!-- POC last name -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/scriba_add_entry_item"
        >
        <TextView
            android:id="@+id/poc_lastname_header"
            android:text="@string/poc_lastname_title"
            style="@style/scriba_entry_item_header"
            />
        <EditText
            android:id="@+id/poc_lastname_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/scriba_entry_delim"
        >
    </LinearLayout>

    <!-- POC mobile number -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/scriba_add_entry_item"
        >
        <TextView
            android:id="@+id/poc_mobilenum_header"
            android:text="@string/poc_mobilenum_title"
            style="@style/scriba_entry_item_header"
            />
        <EditText
            android:id="@+id/poc_mobilenum_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/scriba_entry_delim"
        >
    </LinearLayout>

    <!-- POC phone number -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/scriba_add_entry_item"
        >
        <TextView
            android:id="@+id/poc_phonenum_header"
            android:text="@string/poc_phonenum_title"
            style="@style/scriba_entry_item_header"
            />
        <EditText
            android:id="@+id/poc_phonenum_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/scriba_entry_delim"
        >
    </LinearLayout>

    <!-- POC email -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/scriba_add_entry_item"
        >
        <TextView
            android:id="@+id/poc_email_header"
            android:text="@string/poc_email_title"
            style="@style/scriba_entry_item_header"
            />
        <EditText
            android:id="@+id/poc_email_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/scriba_entry_delim"
        >
    </LinearLayout>

    <!-- POC position -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/scriba_add_entry_item"
        >
        <TextView
            android:id="@+id/poc_position_header"
            android:text="@string/poc_position_title"
            style="@style/scriba_entry_item_header"
            />
        <EditText
            android:id="@+id/poc_position_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/scriba_entry_delim"
        >
    </LinearLayout>

    <!-- POC company -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/scriba_add_entry_item"
        >
        <TextView
            android:id="@+id/poc_company_header"
            android:text="@string/poc_company_title"
            style="@style/scriba_entry_item_header"
            />
        <Spinner
            android:id="@+id/poc_company_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:spinnerMode="dialog"
            android:prompt="@string/poc_company_spinner_prompt"
            />
    </LinearLayout>
</LinearLayout>
</ScrollView>
